[package]
name = "pixy2"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-only"

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.25.0", features = ["derive"] }
defmt = {version = "1.1.0", optional = true}
embedded-hal-async = "1.0.0"
heapless = { version = "0.9.3", features = ["defmt"] }

[features]
defmt = ["dep:defmt"]
